--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700&family=Instrument+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700&family=Instrument+Serif&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -14,6 +14,16 @@ body {
   }
   .font-serif {
     font-family: var(--font-serif), Georgia, serif;
+  }
+  .crimson-text-regular {
+    font-family: var(--font-crimson, "Crimson Text"), serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  .crimson-text-bold {
+    font-family: var(--font-crimson, "Crimson Text"), serif;
+    font-weight: 700;
+    font-style: normal;
   }
 }
 
